name:         mtl
version:      2.2.2
cabal-version: >= 1.6
license:      BSD3
license-file: LICENSE
author:       Andy Gill
maintainer:   Edward Kmett <ekmett@gmail.com>
category:     Control
synopsis:     Monad classes, using functional dependencies
homepage:     http://github.com/ekmett/mtl
bug-reports:  http://github.com/ekmett/mtl/issues
description:
    Monad classes using functional dependencies, with instances
    for various monad transformers, inspired by the paper
    /Functional Programming with Overloading and Higher-Order Polymorphism/,
    by Mark P Jones, in /Advanced School of Functional Programming/, 1995
    (<http://web.cecs.pdx.edu/~mpj/pubs/springschool.html>).
build-type: Simple
extra-source-files: CHANGELOG.markdown
tested-with:
  GHC==7.0.4,
  GHC==7.2.2,
  GHC==7.4.2,
  GHC==7.6.3,
  GHC==7.8.4,
  GHC==7.10.3,
  GHC==7.11.*

source-repository head
  type: git
  location: git://github.com/ekmett/mtl.git

Library
  exposed-modules:
    Control.Monad.Cont
    Control.Monad.Cont.Class
    Control.Monad.Error
    Control.Monad.Error.Class
    Control.Monad.Except
    Control.Monad.Identity
    Control.Monad.List
    Control.Monad.RWS
    Control.Monad.RWS.Class
    Control.Monad.RWS.Lazy
    Control.Monad.RWS.Strict
    Control.Monad.Reader
    Control.Monad.Reader.Class
    Control.Monad.State
    Control.Monad.State.Class
    Control.Monad.State.Lazy
    Control.Monad.State.Strict
    Control.Monad.Trans
    Control.Monad.Writer
    Control.Monad.Writer.Class
    Control.Monad.Writer.Lazy
    Control.Monad.Writer.Strict
  build-depends: base < 6, transformers >= 0.4 && <0.6
  extensions:
    MultiParamTypeClasses
    FunctionalDependencies
    FlexibleInstances
  ghc-options: -Wall -fno-warn-unused-imports -fno-warn-warnings-deprecations
